--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.6.7",
     "leaflet": "^1.9.4",
     "mui-one-time-password-input": "^2.0.1",
     "react": "^18.2.0",
